Padronização das tabelas de todas as telas

--- a/templates/core/categorias_list.html
+++ b/templates/core/categorias_list.html
@@ -9,8 +9,8 @@
 {% block content %}
 <div class="container-fluid">
     <div class="card shadow" style="margin-left:190px; margin-right:190px;">
-        <div class="card-body">
-            <div class="table-responsive" style="margin-left:10px; margin-right:10px;">
+        <div class="card-body p-0 categorias-table-container">
+            <div class="table-responsive" style="margin-left:10px; margin-right:10px; height: 100%;">
                 <table class="table table-hover">
                     <thead class="table-light">
                         <tr>
