--- a/templates/core/transferencias_list.html
+++ b/templates/core/transferencias_list.html
@@ -50,24 +50,25 @@
     </div>
 
     <div class="card shadow">
-        <div class="card-body">
-            <div class="table-responsive">
+        <div class="card-body p-0" style="max-height: 60vh; overflow-y: auto;">
+            <div class="table-responsive" style="height: 100%;">
                 <table class="table table-hover">
                     <thead class="table-light">
                         <tr>
-                            <th>Data</th>
                             <th>Descrição</th>
+                            <th>Valor</th>
+                            <th>Data</th>
                             <th>Conta Origem</th>
                             <th>Conta Destino</th>
-                            <th>Valor</th>
                             <th class="acoes-col">Ações</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for transferencia in transferencias %}
                         <tr>
-                            <td>{{ transferencia.data|date:"d/m/Y" }}</td>
                             <td>{{ transferencia.descricao }}</td>
+                            <td class="fw-bold">{{ transferencia.valor|br_currency }}</td>
+                            <td>{{ transferencia.data|date:"d/m/Y" }}</td>
                             <td>
                                 <span class="badge badge-conta-{{ transferencia.conta_origem.tipo|lower }}">
                                     <i class="{{ transferencia.conta_origem.icone }} me-1"></i>{{ transferencia.conta_origem.nome }}
@@ -78,7 +79,6 @@
                                     <i class="{{ transferencia.conta_destino.icone }} me-1"></i>{{ transferencia.conta_destino.nome }}
                                 </span>
                             </td>
-                            <td class="fw-bold">{{ transferencia.valor|br_currency }}</td>
                             <td class="acoes-col">
                                 <a href="{% url 'core:transferencia_update' transferencia.id %}" class="btn btn-sm btn-outline-primary" title="Editar">
                                     <i class="fas fa-edit"></i>
