--- a/static/core/css/style.css
+++ b/static/core/css/style.css
@@ -606,3 +606,21 @@ body.theme-light .tipo-despesa {
 body.theme-light .tipo-receita {
   color: #4ADE80 !important;
 } 
+
+/* Ocupa altura total disponível para a tabela de categorias, com rolagem só se necessário */
+.categorias-table-container {
+    min-height: 0;
+    height: calc(100vh - 180px); /* Ajuste para descontar header, margens e rodapé */
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+@media (max-width: 991px) {
+  .categorias-table-container {
+    height: calc(100vh - 120px);
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+} 
