--- a/templates/core/metas_list.html
+++ b/templates/core/metas_list.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div class="container-fluid">
     <div class="card shadow">
-        <div class="card-body">
+        <div class="card-body categorias-table-container">
             <div class="table-responsive">
                 <table class="table table-hover">
                     <thead class="table-light">
