--- a/templates/core/categorias_list.html
+++ b/templates/core/categorias_list.html
@@ -8,6 +8,12 @@
 
 {% block content %}
 <div class="container-fluid">
+
+    <div class="d-flex justify-content-end mb-2">
+        <a href="{% url 'core:categoria_create' %}" class="btn btn-primary">
+            <i class="fas fa-plus me-2"></i>Nova Categoria
+        </a>
+    </div>
     <div class="card shadow" style="margin-left:190px; margin-right:190px;">
         <div class="card-body p-0 categorias-table-container">
             <div class="table-responsive" style="margin-left:10px; margin-right:10px; height: 100%;">
