--- a/templates/core/despesas_list.html
+++ b/templates/core/despesas_list.html
@@ -10,6 +10,12 @@
 {% block content %}
 <div class="container-fluid">
 
+    <div class="d-flex justify-content-end mb-2">
+        <a href="{% url 'core:despesa_create' %}" class="btn btn-primary">
+            <i class="fas fa-plus me-2"></i>Nova Despesa
+        </a>
+    </div>
+
     <!-- Filtros -->
     <div class="card mb-4">
         <div class="card-body">
