--- a/templates/core/metas_list.html
+++ b/templates/core/metas_list.html
@@ -8,6 +8,12 @@
 
 {% block content %}
 <div class="container-fluid">
+
+    <div class="d-flex justify-content-end mb-2">
+        <a href="{% url 'core:meta_create' %}" class="btn btn-primary">
+            <i class="fas fa-plus me-2"></i>Nova Meta
+        </a>
+    </div>
     <div class="card shadow">
         <div class="card-body categorias-table-container">
             <div class="table-responsive">
