--- a/templates/core/receitas_list.html
+++ b/templates/core/receitas_list.html
@@ -11,6 +11,12 @@
 {% block content %}
 <div class="container-fluid">
 
+    <div class="d-flex justify-content-end mb-2">
+        <a href="{% url 'core:receita_create' %}" class="btn btn-success">
+            <i class="fas fa-plus me-2"></i>Nova Receita
+        </a>
+    </div>
+
     <!-- Filtros -->
     <div class="card mb-4">
         <div class="card-body">
