--- a/templates/core/cartao_credito_form.html
+++ b/templates/core/cartao_credito_form.html
@@ -1,21 +1,19 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block title %}{{ title }} - SGFP{% endblock %}
+{% block page_title %}<i class="fas fa-credit-card me-2"></i>Novo Cartão de Crédito{% endblock %}
+{% block page_greeting %}Preencha os dados do cartão de crédito{% endblock %}
 {% block content %}
 <div class="container-fluid">
-    <div class="d-flex justify-content-between align-items-center mb-4">
-        <div>
-            <h1 class="h3 mb-0">{{ title }}</h1>
-            <p class="text-muted">Preencha os dados do cartão de crédito</p>
-        </div>
-        <a href="{% url 'core:cartao_credito_list' %}" class="btn btn-outline-secondary">
-            <i class="fas fa-arrow-left me-2"></i>Voltar
-        </a>
-    </div>
     <div class="row justify-content-center">
         <div class="col-lg-7">
             <div class="card shadow">
                 <div class="card-body">
+                    <div class="d-flex justify-content-end mb-4">
+                        <a href="http://127.0.0.1:8000/cartoes-dashboard/" class="btn btn-outline-secondary">
+                            <i class="fas fa-arrow-left me-2"></i>Voltar
+                        </a>
+                    </div>
                     <form method="post">
                         {% csrf_token %}
                         {{ form|crispy }}
