--- a/templates/core/nova_fatura.html
+++ b/templates/core/nova_fatura.html
@@ -1,14 +1,25 @@
 {% extends 'base.html' %}
 {% block title %}Nova Fatura{% endblock %}
+{% block page_icon %}<i class="fas fa-file-invoice-dollar"></i>{% endblock %}
+{% block page_title %}Nova Fatura{% endblock %}
+{% block page_greeting %}Cadastre uma nova fatura para o cartão selecionado{% endblock %}
 {% block content %}
 <div class="container mt-4">
     <div class="card mx-auto" style="max-width:400px;">
         <div class="card-header bg-primary text-white">
-            <h5 class="mb-0">Nova Fatura</h5>
+            <h5 class="mb-0"><i class="fas fa-file-invoice-dollar me-2"></i>Nova Fatura</h5>
         </div>
         <form method="post" class="card-body">
             {% csrf_token %}
-            {{ form|crispy }}
+            {{ form.as_p }}
+            <div class="d-flex justify-content-between mt-3">
+                <a href="{% url 'core:cartoes_dashboard' %}" class="btn btn-secondary">
+                    <i class="fas fa-times me-2"></i>Cancelar
+                </a>
+                <button type="submit" class="btn btn-success">
+                    <i class="fas fa-save me-2"></i>Salvar Fatura
+                </button>
+            </div>
         </form>
     </div>
 </div>
